[package]
name = "tic_tac_toe_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~3.2.0", features = ["yaml"]}
local-ip-address = "0.4.8"
colored = "2"
portpicker = "0.1.1"
clearscreen = "1.0.10"
exitcode = "1.1.2"
regex = "1.6.0"
matrix_display = "1.0.0"
quickcheck = "1.0.3"
